[package]
name = "rsgui"
version = "0.1.0"
authors = ["Bastien Aracil <findbastien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.5.0"
bitflags = "1.2.1"
generational-arena = "0.2.8"
vec-tree = "0.1.2"
